#275 Tests für getAllEventsPaginated und getAllUsersPaginated geschrieben